# gdrawer

./: Cargo.toml  app_data.json  flake.nix
src/: app.rs  config.rs  main.rs
