[package]
name = "gdrawer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dirs-next = "2.0.0"
iced = { version = "0.14.0", features = ["tokio", "image", "advanced"] }
image = "0.25.9"
rand = "0.10.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
